# very-simple-snake-game

./: .gitignore  CMakeLists.txt  README.md
data/applications/: sfml_icon.desktop
data/misc/: ico.rc
src/: main.cpp  the_includes.hpp
src/core_engine/: asset_manager.cpp  asset_manager.hpp  audio_manager.cpp  audio_manager.hpp  clock.cpp  clock.hpp  game.cpp  game.hpp  input_manager.cpp  input_manager.hpp  load_exception.hpp  no_copy_move.hpp  state.hpp  state_machine.cpp  state_machine.hpp
src/maths/: helper.hpp  speed.hpp
src/menu/: game_over_state.cpp  game_over_state.hpp  main_menu_state.cpp  main_menu_state.hpp
src/snake/: dynamic_array.hpp  fruit.cpp  fruit.hpp  main_state.cpp  main_state.hpp  snake.cpp  snake.hpp
src/splash/: splash.cpp  splash.hpp
src/util/: all.cpp  all.hpp  array.hpp  cloneable.hpp  core.hpp  enum.hpp  get_dir.hpp  reader.hpp  size.hpp  span.hpp
